k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: constellation
  labels:
    name: constellation
    vision: equestria-odyssey
