k8s/nakama-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: nakama-db
  namespace: constellation
  labels:
    app: nakama-db
spec:
  ports:
    - port: 5432
  selector:
    app: nakama-db
  clusterIP: None # Headless service for StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nakama-db
  namespace: constellation
spec:
  serviceName: "nakama-db"
  replicas: 1
  selector:
    matchLabels:
      app: nakama-db
  template:
    metadata:
      labels:
        app: nakama-db
    spec:
      containers:
      - name: postgres
        image: postgres:14-alpine
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: nakama-db-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: nakama-db-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp3" # Garantido pelo EBS CSI Driver que ativamos
      resources:
        requests:
          storage: 10Gi
