k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: constellation-ingress
  namespace: constellation
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # HTTPS será adicionado depois com o cert manager
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  rules:
    - host: api.constellationgame.org
      http:
        paths:
          # Auth Service
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          # Combat Service
          - path: /api/v1/combat
            pathType: Prefix
            backend:
              service:
                name: combat-service
                port:
                  number: 80
          # Nakama Public API
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nakama
                port:
                  number: 7350
    - host: console.constellationgame.org
      http:
        paths:
          # Nakama Console
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nakama
                port:
                  number: 7349
